# federated-language-jax

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  pyproject.toml  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_13.txt  requirements_lock_3_9.txt
.github/ISSUES_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test_federated_language_executor.yaml  test_package.yaml  test_project.yaml
federated_language_jax/: BUILD  __init__.py  version.py
federated_language_jax/backend/: BUILD  __init__.py  execution_contexts.py  execution_contexts_test.py
federated_language_jax/backends/: BUILD
federated_language_jax/backends/xla/: BUILD  cpp_execution_contexts.py  cpp_execution_contexts_test.py
federated_language_jax/compiler/: BUILD
federated_language_jax/computation/: BUILD  jax_computation.py  jax_computation_context.py  jax_computation_context_test.py  jax_computation_test.py  jax_serialization.py  jax_serialization_test.py  xla_serialization.py  xla_serialization_test.py
federated_language_jax/environments/: BUILD
federated_language_jax/environments/jax_frontend/: BUILD  __init__.py  jax_computation.py  jax_computation_context_test.py  jax_computation_test.py  jax_serialization.py  jax_serialization_test.py
federated_language_jax/environments/xla_backend/: BUILD  __init__.py  xla_executor_bindings.py  xla_executor_bindings_test.py  xla_serialization.py  xla_serialization_test.py
federated_language_jax/executor/: BUILD  executor_factory.py  xla_bindings.cc  xla_executor.cc  xla_executor.h  xla_executor_test.cc  xla_utils.cc  xla_utils.h  xla_utils_test.cc
test/.github/workflows/: test.yaml
tools/: BUILD  build_package.sh
