[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "federated_language_jax"
description = "JAX computation, compiler, and executor for the Federated Language library."
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = {file = "LICENSE"}
authors = [
  { name="Federated Language Team", email="no-reply@google.com" },
]
keywords = ["federated", "machine", "learning", "jax"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "absl-py~=1.0",
  "cachetools~=5.3",
  "dm-tree~=0.1.8",
  "federated_language~=0.5.1",
  "grpcio~=1.46",  # Required TFF source dependency.
  "jax~=0.4.29",
  "jaxlib~=0.4.29",
  "ml_dtypes>=0.4.0,<0.6",
  "numpy~=2.0",
  "protobuf~=5.29",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/google-parfait/federated-language-jax"
Issues = "https://github.com/google-parfait/federated-language-jax/issues"
Releases = "https://github.com/google-parfait/federated-language-jax/releases"

[tool.setuptools.dynamic]
version = {attr = "federated_language_jax.version.__version__"}

[tool.setuptools.packages.find]
namespaces = false
